Manual merge from trunk into CPALockator-combat-mode
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/CPALockator-update@38575 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c